# serial-capture

./: Cargo.toml  README.md  build.rs  conversation.md
src/: cli.rs  main.rs  platform_guard.rs
src/capture/: active_linux.rs  active_win.rs  mod.rs  passive_linux.rs  passive_win.rs
src/decode/: cdc_acm.rs  ch340.rs  ftdi.rs  mod.rs  pl2303.rs
src/elevation/: mod.rs  win.rs
src/install/: linux_usbmon.rs  mod.rs  win_com0com.rs  win_usbpcap.rs
src/output/: mod.rs  pcap.rs  text.rs
src/resolve/: linux.rs  mod.rs  win.rs
tests/: README.md  run_tests.py
tests/uno_firmware/: uno_firmware.ino
